--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-purple{
+    @apply px-4 py-1 border border-purple-300 rounded-full text-sm font-semibold hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 dark:text-purple-400;
+}
