--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,10 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+
+@variants hover {
+    .rotate-0 {
+        transform: rotate(0deg)
+    }
+}
