--- a/output/tailwind.css
+++ b/output/tailwind.css
@@ -6,6 +6,10 @@
   transform: rotate(0deg)
 }
 
+.focus\:rotate-0:focus {
+  transform: rotate(0deg)
+}
+
 .hover\:rotate-0:hover {
   transform: rotate(0deg)
 }
